@@ -1,4 +1,4 @@
-# CHECKSUMS file written on Mon Feb  3 15:43:17 2003 by CPAN::Checksums (v1.015)
+# CHECKSUMS file written on Mon Feb  3 19:20:36 2003 by CPAN::Checksums (v1.016)
 $cksum = {
   'RCS' => {
     'isdir' => 1
